After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705546 - Never forgets existing hostname for hotspot
Never forgets existing hostname for hotspot
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-06 08:42 UTC by Bastien Nocera
Modified: 2017-03-10 18:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
network: Re-set the SSID when enabling the Hotspot (1.02 KB, patch)
2016-07-27 15:40 UTC, Bastien Nocera
committed Details | Review
Revert "network: Re-set the SSID when enabling the Hotspot" (1.33 KB, patch)
2017-02-22 12:40 UTC, Thomas Haller
none Details | Review
network: Move hotspot connection search into a helper function (2.49 KB, patch)
2017-03-10 13:27 UTC, Bastien Nocera
committed Details | Review
network: Save new SSID to disk before enabling the hotspot (3.98 KB, patch)
2017-03-10 13:27 UTC, Bastien Nocera
none Details | Review
network: Save new SSID to disk before enabling the hotspot (3.89 KB, patch)
2017-03-10 18:18 UTC, Bastien Nocera
committed Details | Review
network: Fix initial state of Wi-Fi device (2.76 KB, patch)
2017-03-10 18:18 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-08-06 08:42:47 UTC
Once created, the name of the hotspot never changes. The network shows up in the network panel, and isn't removable.
Comment 1 Bastien Nocera 2016-07-27 15:40:20 UTC
Created attachment 332224 [details] [review]
network: Re-set the SSID when enabling the Hotspot

Instead of expecting the hostname to stay the same.
Comment 2 Rui Matos 2016-08-15 12:56:53 UTC
Review of attachment 332224 [details] [review]:

looks fine
Comment 3 Bastien Nocera 2016-08-30 15:19:16 UTC
Attachment 332224 [details] pushed as e824868 - network: Re-set the SSID when enabling the Hotspot
Comment 4 Thomas Haller 2017-02-22 12:40:40 UTC
Created attachment 346434 [details] [review]
Revert "network: Re-set the SSID when enabling the Hotspot"

Re-setting the SSID may be sensible. But that would involve
a call to nm_remote_connection_commit_changes_async() to change
the connection profile. Just setting the SSID before calling
nm_client_activate_connection_async() is wrong as this only
changes the local cache of the server-side objects.

This reverts commit e8248689762593c3efd03da239303f1aceb1f81a.
Comment 5 Thomas Haller 2017-02-22 12:41:55 UTC
The patch e824868 is wrong, and will not fix the original issue.

Changing the SSID involves first calling nm_remote_connection_commit_changes_async()
Comment 6 Bastien Nocera 2017-03-10 13:27:13 UTC
Created attachment 347632 [details] [review]
network: Move hotspot connection search into a helper function
Comment 7 Bastien Nocera 2017-03-10 13:27:18 UTC
Created attachment 347633 [details] [review]
network: Save new SSID to disk before enabling the hotspot

Commit e824868 was supposed to do this, but needed to write the changes
out to disk before activating the hotspot.
Comment 8 Bastien Nocera 2017-03-10 13:29:06 UTC
(In reply to Thomas Haller from comment #5)
> The patch e824868 is wrong, and will not fix the original issue.
> 
> Changing the SSID involves first calling
> nm_remote_connection_commit_changes_async()

Sending out a "revert" patch instead of fixing the problem doesn't really help me. The patches above aren't tested (yet).
Comment 9 Bastien Nocera 2017-03-10 18:18:02 UTC
Created attachment 347663 [details] [review]
network: Save new SSID to disk before enabling the hotspot

Commit e824868 was supposed to do this, but needed to write the changes
out to disk before activating the hotspot.
Comment 10 Bastien Nocera 2017-03-10 18:18:21 UTC
Created attachment 347664 [details] [review]
network: Fix initial state of Wi-Fi device

This ensures that:
- the AP list shown on startup when the Hotspot is disabled on
  startup, or when disabling it at run-time
- the hotspot page is shown on startup when the Hotspot is enabled,
  or when it gets enabled at runtime
Comment 11 Bastien Nocera 2017-03-10 18:19:08 UTC
Attachment 347632 [details] pushed as 277ac7d - network: Move hotspot connection search into a helper function
Attachment 347663 [details] pushed as 700e5e5 - network: Save new SSID to disk before enabling the hotspot
Attachment 347664 [details] pushed as c7800dd - network: Fix initial state of Wi-Fi device
Comment 12 Bastien Nocera 2017-03-10 18:21:22 UTC
Also pushed to gnome-3-22