network: Re-set the SSID when enabling the Hotspot

Instead of expecting the hostname to stay the same.

https://bugzilla.gnome.org/show_bug.cgi?id=705546